--- a/todo
+++ b/todo
@@ -15,6 +15,7 @@ help ?
 // ~eval has moved to ~>, help.eval for more info ( ~help lists different helps (help, commands, format)
 // alg.js
 for setTimeout, create a list of timers - flush
+// ~speak typeerror bofh
 
 // DATABASES
 // remind / memo
