legacy porting, updating commands

--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 // TODO //
 
-MVP: old commands, memo/remind, command creation
+MVP: old commands (+inbuilt), memo/remind, command creation, auth
 
 // CMD
 // 2d3h time
