--- a/todo
+++ b/todo
@@ -16,6 +16,7 @@ help ?
 can still do async chaining by changing what print and getJSON etc do, getting commands to run and executing them in promises
 getQuery.then
 search, random
+cancelable getRequest
 cancelable listeners?
 {emoji}
 
