legacy commands supported

--- a/todo
+++ b/todo
@@ -22,6 +22,7 @@ search, random
 cancelable getRequest
 cancelable listeners?
 fetch queue
+roll 7 high scores (hiscore/loscore baleet)
 {emoji}
 ~reddit #
 
