--- a/todo
+++ b/todo
@@ -8,7 +8,7 @@ check old todo list
 Dispose event listener in command editor
 
 MVP: built in commands, memo/remind, command creation, auth, log, help, slots, poker
-help.commands help.colors help.urls help.eval // ~eval has moved to ~>, help.eval for more info
+help.commands help.colors help.urls help.eval help.logs help.memo help.games // ~eval has moved to ~>, help.eval for more info
 memo/remind check IRC.command | 2d3h time
 LOG: IRC.log ~log ~log.regex | ~speak just uses IRC.log
 
@@ -25,7 +25,6 @@ command.source
 store.getDefault()
 // hyperslots {g,r} watermelon ฿ hyperslots bigint
 cancelable getRequest (defend infinite loop
-cancelable listeners?
 roll 7 high scores (hiscore/loscore baleet)
 // logs - profanity stats
 // alg.js
