--- a/todo
+++ b/todo
@@ -1,11 +1,6 @@
 // TODO //
 
-    // change \n to space
-    "log": function(query, text) { IRC.log - limit, offset
-    log.regex
-    log.about
-    speak(query, text) { // use log
-    seen(who, text) {
+    speak(query, text) {
 
     google(query, text) {
     youtube(query, text) { site:youtube.com
@@ -16,7 +11,7 @@
     slotstats() {
     // slots has been played N times
     remind(query, text) {
-    memo(query, text) { target: {bo}<{/}{rand}source{/}{bo}>{/} message // add to util.memo
+    memo(query, text) { target: {bo}<{/}${IRC.parseColors.hashString(user)}${user}{/}{bo}>{/} message // add to util.memo
     "commands": function (query, text) {
     roll7
     trivia() { // http://opentdb.com/api.php?amount=10
