--- a/todo
+++ b/todo
@@ -1,12 +1,16 @@
 // TODO //
 
     poker(query, text) { store.'running' poker.reset
+    Buy in is ... bet or fold
 
     remind(query, text) {
     memo(query, text) { target: {bo}<{/}${IRC.parseColors.hashString(user)}${user}{/}{bo}>{/} message // add to util.memo
     memo.multi(,,)
+    memo.self()
+    add STARTTIME (rewrite table)
 
     help.timestamps (examples)
+    deprecate nibblr1
 
 ====
 
