--- a/todo
+++ b/todo
@@ -18,9 +18,10 @@ roll7
 https://github.com/4chan/4chan-API
 trivia() { // http://opentdb.com/api.php?amount=10
 roulette
-
-// command piping (alt print command, timeout wait etc)
-cancelable promises getRequest (defend infinite loop
+wca
+mdn
+ciu
+cancelable promises getRequest (defend infinite loop better than limit does);
 
 // WEB API
 test command
@@ -42,12 +43,7 @@ testing
 patch the rizon log
 ~shreddydropsthenbomb
 
-// alg.js
 track nicklist
 require() support | npmi
 can still do async chaining by changing what print and getJSON etc do, getting commands to run and executing them in promises
-bully
-wca
-mdn
 bridges?
-data:,<script> (function() { var cx = '004589196096329597303:kqsojvcceue'; var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true; gcse.src = 'https://cse.google.com/cse.js?cx=' + cx; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s); })(); </script> <gcse:search></gcse:search>
