--- a/todo
+++ b/todo
@@ -7,10 +7,9 @@
     memo(query, text) { target: {bo}<{/}${IRC.parseColors.hashString(user)}${user}{/}{bo}>{/} message // add to util.memo
     memo.multi(,,)
     memo.self()
-    add STARTTIME (rewrite table)
 
     help.timestamps (examples)
-    // time ago
+    // time ago / in  (seen)
     babeli
     deprecate nibblr1
     command.search autorun
